chore(releases): prepare a new release

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,6 @@
+### Login As 1.9.3 - October 27, 2016 ###
+ * fix(menus): do not register a menu item for non-admin users
+
 ### Login As 1.9.2 - September 3, 2015 ###
  * Fixes fatal error on logout
 
